# fragments

./: .gitignore  CMakeLists.txt  README.md
docs/: fragments.flatpakrepo  guide.html  index.html  playlist.schema.json  script.js  styles.css
docs/repo/: summary  summary.idx
docs/repo/refs/heads/app/io.github.ajunior.fragments/x86_64/: master
docs/repo/refs/heads/appstream/: x86_64
docs/repo/refs/heads/appstream2/: x86_64
docs/repo/refs/heads/runtime/io.github.ajunior.fragments.Debug/x86_64/: master
docs/repo/summaries/: efacfc09a6f07697143d723d351917646519a7898fc5d686529b2903b5990a95-95b632c3a46e6e08e0a4806a930321710c1e7a6c7943c535e457d2cf300f40b1.delta
packaging/: io.github.ajunior.fragments.desktop  io.github.ajunior.fragments.metainfo.xml  io.github.ajunior.fragments.yml
src/: main.cpp
src/export/: ExportController.cpp  ExportController.h
src/playback/: PlaybackBackend.cpp  PlaybackBackend.h  PlaybackController.cpp  PlaybackController.h  QtMediaPlaybackBackend.cpp  QtMediaPlaybackBackend.h
src/playlist/: Fragment.h  PlaylistModel.cpp  PlaylistModel.h
src/ui/qml/: Main.qml
tests/: PlaybackControllerTests.cpp  PlaylistModelTests.cpp
